[package]
name = "traza"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
dirs = "6.0.0"
html-escape = "0.2.13"
rusqlite = "0.34.0"
webbrowser = "1.0.4"
